--- a/src/main/resources/com/example/pilifitproject/view/Closet.fxml
+++ b/src/main/resources/com/example/pilifitproject/view/Closet.fxml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
-
 
 <AnchorPane prefHeight="440.0" prefWidth="660.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.pilifitproject.view.Closet">
    <children>
@@ -23,5 +23,30 @@
             <Font size="16.0" />
          </font>
       </Text>
+      <Button layoutX="622.0" layoutY="14.0" mnemonicParsing="false" text="X" />
+      <Text layoutX="302.0" layoutY="125.0" strokeType="OUTSIDE" strokeWidth="0.0" text="CATEGORY : " wrappingWidth="163.61761474609375">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Text>
+      <Text layoutX="305.0" layoutY="155.0" strokeType="OUTSIDE" strokeWidth="0.0" text="COLOR : " wrappingWidth="163.61761474609375">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Text>
+      <Text layoutX="305.0" layoutY="184.0" strokeType="OUTSIDE" strokeWidth="0.0" text="STYLE : " wrappingWidth="163.61761474609375">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Text>
+      <Text layoutX="305.0" layoutY="215.0" strokeType="OUTSIDE" strokeWidth="0.0" text="SIZE :" wrappingWidth="163.61761474609375">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Text>
+      <ChoiceBox layoutX="440.0" layoutY="107.0" prefWidth="150.0" />
+      <TextField layoutX="440.0" layoutY="136.0" prefHeight="26.0" prefWidth="150.0" />
+      <ChoiceBox layoutX="440.0" layoutY="166.0" prefWidth="150.0" />
+      <TextField layoutX="440.0" layoutY="196.0" prefHeight="26.0" prefWidth="150.0" />
    </children>
 </AnchorPane>
