--- a/src/main/resources/com/example/pilifitproject/view/Contact.fxml
+++ b/src/main/resources/com/example/pilifitproject/view/Contact.fxml
@@ -1,12 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
-<?import javafx.scene.layout.FlowPane?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.effect.Blend?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="451.0" prefWidth="782.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+
+<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="512.0" prefWidth="864.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <TabPane prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE">
         <tabs>
@@ -14,15 +23,66 @@
           <Tab text="ABOUT" />
             <Tab text="CONTACT">
                <content>
-                  <FlowPane prefHeight="200.0" prefWidth="200.0">
+                  <VBox prefHeight="200.0" prefWidth="100.0">
                      <children>
-                        <FlowPane prefHeight="421.0" prefWidth="435.0">
+                        <Pane prefHeight="200.0" prefWidth="200.0">
                            <children>
-                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="394.13671875" />
+                              <AnchorPane layoutX="407.0" layoutY="7.0" prefHeight="41.0" prefWidth="64.0" style="-fx-background-color: grey;" />
                            </children>
-                        </FlowPane>
+                        </Pane>
+                        <Pane prefHeight="525.0" prefWidth="782.0" style="-fx-background-color: grey;">
+                           <children>
+                              <Pane layoutX="116.0" layoutY="52.0" prefHeight="275.0" prefWidth="330.0" style="-fx-background-color: #999999;">
+                                 <children>
+                                    <Label layoutX="16.0" layoutY="12.0" prefHeight="36.0" prefWidth="179.0" text="CONTACT US" textFill="WHITE">
+                                       <font>
+                                          <Font size="25.0" />
+                                       </font>
+                                       <effect>
+                                          <Blend opacity="0.69" />
+                                       </effect>
+                                    </Label>
+                                    <Label layoutX="17.0" layoutY="49.0" prefHeight="58.0" prefWidth="364.0" textAlignment="JUSTIFY" textFill="WHITE">
+                                       <graphic>
+                                          <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="We’re here to help. Whether you have questions, feedback, or business inquiries, our team is ready to assist you. Reach out and let’s connect." wrappingWidth="294.02691650390625" />
+                                       </graphic>
+                                    </Label>
+                                    <Pane layoutX="17.0" layoutY="118.0" prefHeight="134.0" prefWidth="297.0" style="-fx-background-color: #949494;">
+                                       <children>
+                                          <Label layoutX="14.0" layoutY="12.0" prefHeight="30.0" prefWidth="249.0" text="  XXX-XXX-XXXX" textFill="WHITE">
+                                             <graphic>
+                                                <AnchorPane prefHeight="34.0" prefWidth="39.0" style="-fx-background-color: grey;" />
+                                             </graphic>
+                                          </Label>
+                                          <Label layoutX="14.0" layoutY="52.0" prefHeight="30.0" prefWidth="249.0" text="  AMSW@gmail.com" textFill="WHITE">
+                                             <graphic>
+                                                <AnchorPane prefHeight="34.0" prefWidth="39.0" style="-fx-background-color: grey;" />
+                                             </graphic>
+                                          </Label>
+                                          <Label layoutX="14.0" layoutY="92.0" prefHeight="30.0" prefWidth="249.0" text="  National University - Manila" textFill="WHITE">
+                                             <graphic>
+                                                <AnchorPane prefHeight="34.0" prefWidth="39.0" style="-fx-background-color: grey;" />
+                                             </graphic>
+                                          </Label>
+                                       </children>
+                                    </Pane>
+                                 </children>
+                              </Pane>
+                              <Pane layoutX="481.0" layoutY="32.0" prefHeight="311.0" prefWidth="325.0" style="-fx-background-color: #474747;" />
+                              <Label layoutX="490.0" layoutY="35.0" text="NAME" textFill="WHITE" />
+                              <Label layoutX="490.0" layoutY="88.0" text="EMAIL" textFill="WHITE" />
+                              <Label layoutX="490.0" layoutY="138.0" text="PHONE NUMBER" textFill="WHITE" />
+                              <Label layoutX="490.0" layoutY="188.0" text="MESSAGE" textFill="WHITE" />
+                              <TextField layoutX="490.0" layoutY="153.0" prefHeight="25.0" prefWidth="305.0" promptText="XXX-XXX-XXXX" />
+                              <TextField layoutX="490.0" layoutY="52.0" prefHeight="25.0" prefWidth="305.0" promptText="FULL NAME" />
+                              <TextArea layoutX="490.0" layoutY="204.0" prefHeight="87.0" prefWidth="305.0" promptText="WRITE YOUR MESSAGE HERE..." />
+                              <TextField layoutX="490.0" layoutY="103.0" prefHeight="25.0" prefWidth="305.0" promptText="EXAMPLE@GMAIL.COM" />
+                              <Button layoutX="743.0" layoutY="306.0" mnemonicParsing="false" text="SEND" />
+                           </children>
+                        </Pane>
+                        <Pane prefHeight="200.0" prefWidth="838.0" />
                      </children>
-                  </FlowPane>
+                  </VBox>
                </content>
             </Tab>
         </tabs>
