Upload Dialog and Closet fxml file with cs integration

--- a/src/main/resources/com/example/pilifitproject/view/Closet.fxml
+++ b/src/main/resources/com/example/pilifitproject/view/Closet.fxml
@@ -1,52 +1,73 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ChoiceBox?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="440.0" prefWidth="660.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.pilifitproject.view.Closet">
+<AnchorPane prefHeight="440.0" prefWidth="660.0" stylesheets="@../styles/Closet.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.pilifitproject.view.Closet">
    <children>
-      <AnchorPane layoutX="54.0" layoutY="62.0" prefHeight="266.0" prefWidth="212.0" style="-fx-background-color: #CCCCCC;" AnchorPane.bottomAnchor="111.20000000000005" AnchorPane.leftAnchor="54.0" AnchorPane.rightAnchor="393.6" AnchorPane.topAnchor="62.0">
+
+      <!-- Container with rounded corners -->
+      <VBox layoutX="20.0" layoutY="20.0" spacing="20" prefWidth="620.0" style="-fx-background-color: white; -fx-background-radius: 20; -fx-border-radius: 20; -fx-border-color: #ccc; -fx-padding: 20;">
          <children>
-            <ImageView fitHeight="202.0" fitWidth="200.0" layoutX="6.0" layoutY="9.0" pickOnBounds="true" preserveRatio="true" style="-fx-image: C:\Users\cyy\Downloads\1.png;" />
+
+            <!-- Image & Form Details Row -->
+            <HBox spacing="30">
+               <children>
+
+                  <!-- Image Container -->
+                  <AnchorPane prefHeight="250" prefWidth="220" style="-fx-background-color: #CCCCCC; -fx-background-radius: 15;">
+                     <children>
+                        <ImageView fx:id="clothingImage" fitHeight="230" fitWidth="200" layoutX="10" layoutY="10" pickOnBounds="true" preserveRatio="true" />
+                     </children>
+                  </AnchorPane>
+
+                  <!-- Details Column -->
+                  <VBox spacing="10">
+                     <children>
+                        <Text text="CLOTHES DETAILS" style="-fx-font-weight: bold; -fx-font-size: 14px;" />
+
+                        <!-- Category -->
+                        <HBox spacing="10">
+                           <Text text="CATEGORY:" />
+                           <MenuButton text="Select Category" fx:id="categoryDropdown" style="-fx-background-radius: 10;" />
+                        </HBox>
+
+                        <!-- Style -->
+                        <HBox spacing="10">
+                           <Text text="STYLE:" />
+                           <MenuButton text="Select Style" fx:id="styleDropdown" style="-fx-background-radius: 10;" />
+                        </HBox>
+
+                        <!-- Color -->
+                        <HBox spacing="10">
+                           <Text text="COLOR:" />
+                           <TextField fx:id="colorInput" promptText="Enter color" style="-fx-background-radius: 10;" />
+                        </HBox>
+
+                        <!-- Size -->
+                        <HBox spacing="10">
+                           <Text text="SIZE:" />
+                           <TextField fx:id="sizeInput" promptText="Enter size" style="-fx-background-radius: 10;" />
+                        </HBox>
+
+                     </children>
+                  </VBox>
+               </children>
+            </HBox>
+
+            <!-- Bottom Bar -->
+            <HBox spacing="10" alignment="CENTER_LEFT">
+               <children>
+                  <Button fx:id="editNameBtn" text="✎" styleClass="icon-button" />
+                  <TextField fx:id="nameInput" promptText="Name" />
+                  <Button fx:id="favoriteBtn" text="❤" styleClass="icon-button" />
+                  <Button fx:id="deleteBtn" text="🗑" styleClass="icon-button" />
+               </children>
+            </HBox>
+
          </children>
-      </AnchorPane>
-      <TextField layoutX="71.0" layoutY="354.0" prefHeight="26.0" prefWidth="124.0" />
-      <Button layoutX="202.0" layoutY="354.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="28.0" text="z" AnchorPane.bottomAnchor="61.19999999999999" AnchorPane.leftAnchor="202.0" AnchorPane.rightAnchor="430.0" AnchorPane.topAnchor="354.0" />
-      <Button layoutX="234.0" layoutY="354.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="28.0" text="z" />
-      <Text layoutX="302.0" layoutY="93.0" strokeType="OUTSIDE" strokeWidth="0.0" text="CLOTHES DETAIL :" wrappingWidth="163.61761474609375">
-         <font>
-            <Font size="16.0" />
-         </font>
-      </Text>
-      <Button layoutX="622.0" layoutY="14.0" mnemonicParsing="false" text="X" />
-      <Text layoutX="302.0" layoutY="125.0" strokeType="OUTSIDE" strokeWidth="0.0" text="CATEGORY : " wrappingWidth="163.61761474609375">
-         <font>
-            <Font size="16.0" />
-         </font>
-      </Text>
-      <Text layoutX="305.0" layoutY="155.0" strokeType="OUTSIDE" strokeWidth="0.0" text="COLOR : " wrappingWidth="163.61761474609375">
-         <font>
-            <Font size="16.0" />
-         </font>
-      </Text>
-      <Text layoutX="305.0" layoutY="184.0" strokeType="OUTSIDE" strokeWidth="0.0" text="STYLE : " wrappingWidth="163.61761474609375">
-         <font>
-            <Font size="16.0" />
-         </font>
-      </Text>
-      <Text layoutX="305.0" layoutY="215.0" strokeType="OUTSIDE" strokeWidth="0.0" text="SIZE :" wrappingWidth="163.61761474609375">
-         <font>
-            <Font size="16.0" />
-         </font>
-      </Text>
-      <ChoiceBox layoutX="440.0" layoutY="107.0" prefWidth="150.0" />
-      <TextField layoutX="440.0" layoutY="136.0" prefHeight="26.0" prefWidth="150.0" />
-      <ChoiceBox layoutX="440.0" layoutY="166.0" prefWidth="150.0" />
-      <TextField layoutX="440.0" layoutY="196.0" prefHeight="26.0" prefWidth="150.0" />
+      </VBox>
    </children>
 </AnchorPane>
