--- a/src/main/resources/com/example/pilifitproject/view/Closet.fxml
+++ b/src/main/resources/com/example/pilifitproject/view/Closet.fxml
@@ -1,73 +1,124 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.MenuButton?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="440.0" prefWidth="660.0" stylesheets="@../styles/Closet.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.pilifitproject.view.Closet">
+<AnchorPane prefHeight="386.0" prefWidth="590.0" styleClass="tab-border" stylesheets="@../styles/Closet.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.pilifitproject.view.Closet">
    <children>
 
+                  <!-- Image & Form Details Row -->
+      <HBox prefHeight="242.0" prefWidth="219.0" spacing="30" />
+
       <!-- Container with rounded corners -->
-      <VBox layoutX="20.0" layoutY="20.0" spacing="20" prefWidth="620.0" style="-fx-background-color: white; -fx-background-radius: 20; -fx-border-radius: 20; -fx-border-color: #ccc; -fx-padding: 20;">
+      <VBox layoutX="50.0" layoutY="299.0" prefHeight="34.0" prefWidth="219.0" spacing="20">
          <children>
-
-            <!-- Image & Form Details Row -->
-            <HBox spacing="30">
+      
+            <!-- Bottom Bar -->
+            <HBox alignment="CENTER_LEFT" prefHeight="26.0" prefWidth="188.0" spacing="10">
                <children>
-
-                  <!-- Image Container -->
-                  <AnchorPane prefHeight="250" prefWidth="220" style="-fx-background-color: #CCCCCC; -fx-background-radius: 15;">
-                     <children>
-                        <ImageView fx:id="clothingImage" fitHeight="230" fitWidth="200" layoutX="10" layoutY="10" pickOnBounds="true" preserveRatio="true" />
-                     </children>
-                  </AnchorPane>
-
-                  <!-- Details Column -->
-                  <VBox spacing="10">
-                     <children>
-                        <Text text="CLOTHES DETAILS" style="-fx-font-weight: bold; -fx-font-size: 14px;" />
-
-                        <!-- Category -->
-                        <HBox spacing="10">
-                           <Text text="CATEGORY:" />
-                           <MenuButton text="Select Category" fx:id="categoryDropdown" style="-fx-background-radius: 10;" />
-                        </HBox>
-
-                        <!-- Style -->
-                        <HBox spacing="10">
-                           <Text text="STYLE:" />
-                           <MenuButton text="Select Style" fx:id="styleDropdown" style="-fx-background-radius: 10;" />
-                        </HBox>
-
-                        <!-- Color -->
-                        <HBox spacing="10">
-                           <Text text="COLOR:" />
-                           <TextField fx:id="colorInput" promptText="Enter color" style="-fx-background-radius: 10;" />
-                        </HBox>
-
-                        <!-- Size -->
-                        <HBox spacing="10">
-                           <Text text="SIZE:" />
-                           <TextField fx:id="sizeInput" promptText="Enter size" style="-fx-background-radius: 10;" />
-                        </HBox>
-
-                     </children>
-                  </VBox>
+                  <TextField fx:id="nameInput" alignment="CENTER" prefHeight="26.0" prefWidth="155.0" promptText="Name" styleClass="icon-button" text="fd" />
+                  <Button fx:id="favoriteBtn" ellipsisString="❤" styleClass="icon-button" text="❤" textAlignment="CENTER">
+                     <font>
+                        <Font size="19.0" />
+                     </font>
+                  </Button>
+                  <Button fx:id="deleteBtn" ellipsisString="🗑" styleClass="icon-button" text="🗑" />
                </children>
             </HBox>
+         </children>
+      </VBox>
 
-            <!-- Bottom Bar -->
-            <HBox spacing="10" alignment="CENTER_LEFT">
-               <children>
-                  <Button fx:id="editNameBtn" text="✎" styleClass="icon-button" />
-                  <TextField fx:id="nameInput" promptText="Name" />
-                  <Button fx:id="favoriteBtn" text="❤" styleClass="icon-button" />
-                  <Button fx:id="deleteBtn" text="🗑" styleClass="icon-button" />
-               </children>
+      <!-- Details Column -->
+      <VBox layoutX="325.0" layoutY="51.0" prefHeight="183.0" prefWidth="218.0" spacing="10">
+         <children>
+            <Text styleClass="title-text" text="CLOTHES DETAILS" wrappingWidth="217.864501953125">
+               <font>
+                  <Font name="Berlin Sans FB Bold" size="15.0" />
+               </font>
+            </Text>
+
+            <!-- Category -->
+            <HBox prefHeight="31.0" prefWidth="211.0" spacing="10">
+               <Text styleClass="text-filter" text="CATEGORY:" />
+               <MenuButton fx:id="categoryDropdown" accessibleRole="COMBO_BOX" prefHeight="31.0" prefWidth="129.0" styleClass="icon-button" text="Select Category">
+                  <font>
+                     <Font size="9.0" />
+                  </font>
+               </MenuButton>
+            </HBox>
+
+            <!-- Style -->
+            <HBox prefHeight="22.0" prefWidth="238.0" spacing="10">
+               <Text styleClass="text-filter" text="STYLE:" wrappingWidth="76.5501708984375" />
+               <MenuButton fx:id="styleDropdown" prefHeight="31.0" prefWidth="156.0" styleClass="icon-button" text="Select Style">
+                  <font>
+                     <Font size="9.0" />
+                  </font>
+               </MenuButton>
+            </HBox>
+
+            <!-- Color -->
+            <HBox spacing="10">
+               <Text styleClass="text-filter" text="COLOR:" wrappingWidth="76.4595947265625" />
+               <TextField fx:id="colorInput" prefHeight="26.0" prefWidth="154.0" promptText="Enter color" style="-fx-background-radius: 5;" styleClass="icon-button" />
+            </HBox>
+
+            <!-- Size -->
+            <HBox spacing="10">
+               <Text styleClass="text-filter" text="SIZE:" wrappingWidth="76.82635498046875" />
+               <TextField fx:id="sizeInput" prefHeight="26.0" prefWidth="137.0" promptText="Enter size" style="-fx: 5;" styleClass="icon-button" />
             </HBox>
 
          </children>
       </VBox>
+
+      <!-- Image Container -->
+      <AnchorPane layoutX="49.0" layoutY="51.0" prefHeight="234.0" prefWidth="182.0" style="-fx-background-color: #CCCCCC; -fx-background-radius: 15; -fx-border-color: black;" styleClass="image-holder">
+         <children>
+            <ImageView fx:id="clothingImage1" fitHeight="148.0" fitWidth="127.0" layoutX="11.0" layoutY="11.0" pickOnBounds="true" preserveRatio="true" />
+            <ImageView fx:id="clothingImage" fitHeight="234.0" fitWidth="219.0" layoutX="-2.0" layoutY="-2.0" pickOnBounds="true" preserveRatio="true" styleClass="tab-border" />
+         </children>
+      </AnchorPane>
+      <GridPane layoutX="285.0" layoutY="271.0" prefHeight="95.0" prefWidth="94.0" styleClass="tab-border">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+      </GridPane>
+      <GridPane layoutX="388.0" layoutY="271.0" prefHeight="95.0" prefWidth="93.0" styleClass="tab-border">
+         <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+         </columnConstraints>
+         <rowConstraints>
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+         </rowConstraints>
+      </GridPane>
+      <GridPane layoutX="488.0" layoutY="271.0" prefHeight="95.0" prefWidth="93.0" styleClass="tab-border">
+         <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+         </columnConstraints>
+         <rowConstraints>
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+         </rowConstraints>
+      </GridPane>
+      <Button layoutX="554.0" layoutY="28.0" mnemonicParsing="false" styleClass="close-button" text="X" />
+      <Label layoutX="325.0" layoutY="242.0" prefHeight="11.0" prefWidth="61.0" text="PREVIEW" textAlignment="CENTER">
+         <font>
+            <Font name="System Italic" size="12.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
