--- a/src/main/resources/com/example/pilifitproject/view/ItemDisplay.fxml
+++ b/src/main/resources/com/example/pilifitproject/view/ItemDisplay.fxml
@@ -1,75 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
-<?import javafx.scene.text.TextFlow?>
 
-<AnchorPane fx:id="root" prefHeight="423.0" prefWidth="345.0" styleClass="soft-tab" stylesheets="@../styles/UploadDialog.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
-    <children>
-        <Button layoutX="286.0" layoutY="13.0" mnemonicParsing="false" styleClass="close-button" text="X">
-            <font>
-                <Font name="System Bold" size="4.0" />
-            </font>
-        </Button>
-        <AnchorPane layoutX="22.0" layoutY="22.0" prefHeight="371.0" prefWidth="288.0">
-            <children>
-                <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#c3c9cf" height="185.0" layoutX="12.0" layoutY="28.0" stroke="BLACK" strokeLineJoin="ROUND" strokeType="INSIDE" width="279.0" />
-                <Text layoutX="24.0" layoutY="239.0" strokeType="OUTSIDE" strokeWidth="0.0" text="GUIDELINES FOR TAKING A PICTURE OF YOUR CLOTH">
-                    <font>
-                        <Font name="System Bold" size="10.0" />
-                    </font>
-                </Text>
-                <TextFlow layoutX="34.0" layoutY="246.0" prefHeight="35.0" prefWidth="189.0">
-                    <children>
-                        <Text opacity="0.6" text="• Prepare your clothes neatly (iron if needed)" wrappingWidth="157.50997924804688">
-                            <font>
-                                <Font name="Berlin Sans FB" size="10.0" />
-                            </font>
-                        </Text>
-                        <Text opacity="0.6" text="   • Lay flat on a clean floor or hang on a wall" wrappingWidth="194.53125">
-                            <font>
-                                <Font name="Berlin Sans FB" size="10.0" />
-                            </font>
-                        </Text>
-                        <Text opacity="0.6" text="                • Take a clear front photo with your phone." wrappingWidth="233.6678466796875">
-                            <font>
-                                <Font name="Berlin Sans FB" size="10.0" />
-                            </font>
-                        </Text>
-                        <Text blendMode="MULTIPLY" opacity="0.6" text="             • Make sure the whole item is in the frame." wrappingWidth="258.484375">
-                            <font>
-                                <Font name="Berlin Sans FB" size="10.0" />
-                            </font>
-                        </Text>
-                        <Text opacity="0.6" text="     • Use natural light (like near a window).">
-                            <font>
-                                <Font name="Berlin Sans FB" size="10.0" />
-                            </font>
-                        </Text>
-                    </children>
-                </TextFlow>
-                <Button layoutX="99.0" layoutY="328.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="117.0" styleClass="upload-button" text="UPLOAD FILE">
-                    <font>
-                        <Font name="Bell MT Bold" size="10.0" />
-                    </font>
-                </Button>
-                <ImageView fitHeight="184.0" fitWidth="270.0" layoutX="23.0" layoutY="29.0" pickOnBounds="true" preserveRatio="true" />
-            </children>
-            <padding>
-                <Insets top="10.0" />
-            </padding>
-            <cursor>
-                <Cursor fx:constant="DEFAULT" />
-            </cursor></AnchorPane>
-    </children>
-    <padding>
-        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-    </padding>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="370.0" prefWidth="300.0" style="-fx-border-radius: 20;" styleClass="tab-border" stylesheets="@../styles/ItemDisplay.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <Pane layoutX="10.0" layoutY="14.0" prefHeight="282.0" prefWidth="280.0" style="-fx-background-color: #888888;" styleClass="image-view">
+         <children>
+            <ImageView fitHeight="282.0" fitWidth="280.0" pickOnBounds="true" preserveRatio="true" />
+         </children>
+      </Pane>
+      <Pane layoutX="21.0" layoutY="305.0" prefHeight="56.0" prefWidth="259.0">
+         <children>
+            <TextField prefHeight="30.0" prefWidth="201.0" styleClass="name-button" stylesheets="@../styles/ItemDisplay.css">
+               <font>
+                  <Font name="System Bold" size="88.0" />
+               </font></TextField>
+            <TextField layoutY="31.0" prefHeight="25.0" prefWidth="201.0" styleClass="details-button">
+               <font>
+                  <Font size="13.0" />
+               </font></TextField>
+            <Button layoutX="220.0" layoutY="6.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="40.0" styleClass="icon-button" stylesheets="@../styles/ItemDisplay.css" text="♥">
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </Button>
+         </children>
+      </Pane>
+   </children>
 </AnchorPane>
-
