--- a/src/main/resources/com/example/pilifitproject/view/Generate2.fxml
+++ b/src/main/resources/com/example/pilifitproject/view/Generate2.fxml
@@ -9,15 +9,14 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-
-<AnchorPane prefHeight="550.0" prefWidth="796.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.pilifitproject.view.Generate2">
+<AnchorPane prefHeight="552.0" prefWidth="802.0" stylesheets="@../styles/Generate2.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.pilifitproject.view.Generate2">
    <children>
-      <Pane layoutX="409.0" layoutY="11.0" prefHeight="529.0" prefWidth="379.0" style="-fx-background-color: #424242;">
+      <Pane layoutX="409.0" layoutY="11.0" prefHeight="529.0" prefWidth="379.0">
          <children>
             <GridPane prefHeight="529.0" prefWidth="379.0">
                <columnConstraints>
-                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="122.0" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="157.0" minWidth="10.0" prefWidth="153.0" />
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                </columnConstraints>
                <rowConstraints>
@@ -29,24 +28,25 @@
                </rowConstraints>
                <children>
                   <ImageView fitHeight="105.0" fitWidth="111.0" layoutX="252.0" layoutY="13.0" pickOnBounds="true" preserveRatio="true" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
-                  <ImageView fitHeight="105.0" fitWidth="111.0" layoutX="10.0" layoutY="123.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
+                  <ImageView fitHeight="160.0" fitWidth="155.0" layoutX="10.0" layoutY="123.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
                   <ImageView fitHeight="105.0" fitWidth="111.0" layoutX="252.0" layoutY="123.0" pickOnBounds="true" preserveRatio="true" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
-                  <ImageView fitHeight="105.0" fitWidth="111.0" layoutX="10.0" layoutY="233.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
+                  <ImageView fitHeight="138.0" fitWidth="151.0" layoutX="10.0" layoutY="233.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
                   <ImageView fitHeight="105.0" fitWidth="111.0" layoutX="252.0" layoutY="233.0" pickOnBounds="true" preserveRatio="true" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER" />
-                  <ImageView fitHeight="105.0" fitWidth="111.0" layoutX="10.0" layoutY="342.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER" />
-                  <Button mnemonicParsing="false" text="SAVE" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="BASELINE" />
-                  <Button layoutX="300.0" layoutY="459.0" mnemonicParsing="false" text="X" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.valignment="BASELINE" />
-                  <Button layoutX="300.0" layoutY="459.0" mnemonicParsing="false" text="&gt;" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER" />
-                  <Button layoutX="263.0" layoutY="357.0" mnemonicParsing="false" text="&gt;" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
-                  <Button layoutX="263.0" layoutY="255.0" mnemonicParsing="false" text="&gt;" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
-                  <Button layoutX="314.0" layoutY="152.0" mnemonicParsing="false" text="&lt;" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
-                  <Button layoutX="10.0" layoutY="152.0" mnemonicParsing="false" text="&lt;" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
-                  <Button layoutX="10.0" layoutY="255.0" mnemonicParsing="false" text="&lt;" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER" />
+                  <ImageView fitHeight="98.0" fitWidth="153.0" layoutX="10.0" layoutY="342.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER" />
+                  <Button mnemonicParsing="false" styleClass="icon-button" text="SAVE" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="CENTER" />
+                  <Button layoutX="300.0" layoutY="459.0" mnemonicParsing="false" styleClass="icon-button" text="X" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.valignment="BASELINE" />
+                  <Button layoutX="300.0" layoutY="459.0" mnemonicParsing="false" styleClass="icon-button" text="&gt;" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER" />
+                  <Button layoutX="263.0" layoutY="357.0" mnemonicParsing="false" styleClass="icon-button" text="&gt;" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
+                  <Button layoutX="263.0" layoutY="255.0" mnemonicParsing="false" styleClass="icon-button" text="&gt;" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
+                  <Button layoutX="314.0" layoutY="152.0" mnemonicParsing="false" styleClass="icon-button" text="&lt;" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
+                  <Button layoutX="10.0" layoutY="152.0" mnemonicParsing="false" styleClass="icon-button" text="&lt;" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
+                  <Button layoutX="10.0" layoutY="255.0" mnemonicParsing="false" styleClass="icon-button" text="&lt;" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER" />
+                  <Button mnemonicParsing="false" styleClass="icon-button" text="GENERATE" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
                </children>
             </GridPane>
          </children>
       </Pane>
-      <Pane layoutX="14.0" layoutY="42.0" prefHeight="467.0" prefWidth="386.0" style="-fx-background-color: #999999;">
+      <Pane layoutX="14.0" layoutY="42.0" prefHeight="467.0" prefWidth="386.0">
          <children>
             <GridPane layoutX="32.0" layoutY="16.0" prefHeight="438.0" prefWidth="347.0">
               <columnConstraints>
@@ -75,7 +75,7 @@
                   <ImageView fitHeight="105.0" fitWidth="111.0" layoutX="129.0" layoutY="13.0" pickOnBounds="true" preserveRatio="true" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
                </children>
             </GridPane>
-            <ScrollBar layoutX="11.0" layoutY="110.0" orientation="VERTICAL" prefHeight="249.0" prefWidth="14.0" />
+            <ScrollBar layoutX="11.0" layoutY="110.0" opacity="0.55" orientation="VERTICAL" prefHeight="249.0" prefWidth="14.0" />
          </children>
       </Pane>
    </children>
