--- a/src/main/resources/com/example/pilifitproject/view/ItemDisplay.fxml
+++ b/src/main/resources/com/example/pilifitproject/view/ItemDisplay.fxml
@@ -11,6 +11,7 @@
    <children>
       <Pane layoutX="10.0" layoutY="14.0" prefHeight="282.0" prefWidth="280.0" style="-fx-background-color: #888888;" styleClass="image-view">
          <children>
+
             <ImageView fitHeight="282.0" fitWidth="280.0" pickOnBounds="true" preserveRatio="true" />
          </children>
       </Pane>
@@ -24,7 +25,7 @@
                <font>
                   <Font size="13.0" />
                </font></TextField>
-            <Button layoutX="220.0" layoutY="6.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="40.0" styleClass="icon-button" stylesheets="@../styles/ItemDisplay.css" text="♥">
+            <Button layoutX="216.0" layoutY="5.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="44.0" styleClass="icon-button" stylesheets="@../styles/ItemDisplay.css" text="❤">
                <font>
                   <Font size="20.0" />
                </font>
