--- a/src/main/resources/com/example/pilifitproject/view/Home.fxml
+++ b/src/main/resources/com/example/pilifitproject/view/Home.fxml
@@ -35,8 +35,10 @@
                     <image>
                         <Image url="@../images/banner.jpg" />
                     </image>
-                </ImageView>
 
+
+                </ImageView>
+                <ImageView fx:id="itemImageView" />
                 <VBox alignment="CENTER" prefHeight="130.0" prefWidth="800.0" spacing="10">
                     <Label style="-fx-font-size: 32; -fx-font-weight: bold;" text="PILIFITS" textAlignment="CENTER" textFill="#2e2e2e" translateY="15.0" />
                <Button mnemonicParsing="false" text="&gt;">
