--- a/src/main/resources/com/example/pilifitproject/view/Contact.fxml
+++ b/src/main/resources/com/example/pilifitproject/view/Contact.fxml
@@ -2,90 +2,143 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Tab?>
-<?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.effect.Blend?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="512.0" prefWidth="864.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
-   <children>
-      <TabPane prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE">
-        <tabs>
-          <Tab text="HOME" />
-          <Tab text="ABOUT" />
-            <Tab text="CONTACT">
-               <content>
-                  <VBox prefHeight="200.0" prefWidth="100.0">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="707.0" prefWidth="1392.0" stylesheets="@../styles/Contact.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+   <center>
+      <VBox BorderPane.alignment="CENTER">
+         <children>
+            <HBox prefHeight="695.0" prefWidth="1030.0">
+               <children>
+                  <StackPane>
                      <children>
-                        <Pane prefHeight="200.0" prefWidth="200.0">
+                        <AnchorPane prefHeight="601.0" prefWidth="1452.0" style="-fx-background-color: #cccccc;">
                            <children>
-                              <AnchorPane layoutX="407.0" layoutY="7.0" prefHeight="41.0" prefWidth="64.0" style="-fx-background-color: grey;" />
-                           </children>
-                        </Pane>
-                        <Pane prefHeight="525.0" prefWidth="782.0" style="-fx-background-color: grey;">
-                           <children>
-                              <Pane layoutX="116.0" layoutY="52.0" prefHeight="275.0" prefWidth="330.0" style="-fx-background-color: #999999;">
+                              <Pane layoutX="260.0" layoutY="104.0" prefHeight="397.0" prefWidth="460.0" style="-fx-background-color: #999999;" styleClass="tab-border">
                                  <children>
-                                    <Label layoutX="16.0" layoutY="12.0" prefHeight="36.0" prefWidth="179.0" text="CONTACT US" textFill="WHITE">
+                                    <Label layoutX="19.0" layoutY="21.0" prefHeight="51.0" prefWidth="287.0" styleClass="title-text" text="CONTACT US" textFill="WHITE">
                                        <font>
-                                          <Font size="25.0" />
+                                          <Font size="32.0" />
                                        </font>
                                        <effect>
                                           <Blend opacity="0.69" />
                                        </effect>
                                     </Label>
-                                    <Label layoutX="17.0" layoutY="49.0" prefHeight="58.0" prefWidth="364.0" textAlignment="JUSTIFY" textFill="WHITE">
-                                       <graphic>
-                                          <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="We’re here to help. Whether you have questions, feedback, or business inquiries, our team is ready to assist you. Reach out and let’s connect." wrappingWidth="294.02691650390625" />
-                                       </graphic>
-                                    </Label>
-                                    <Pane layoutX="17.0" layoutY="118.0" prefHeight="134.0" prefWidth="297.0" style="-fx-background-color: #949494;">
+                                    <Label layoutX="19.0" layoutY="65.0" prefHeight="56.0" prefWidth="400.0" textAlignment="JUSTIFY" textFill="WHITE" />
+                                    <Pane layoutX="17.0" layoutY="141.0" prefHeight="235.0" prefWidth="415.0" style="-fx-background-color: #949494;">
                                        <children>
-                                          <Label layoutX="14.0" layoutY="12.0" prefHeight="30.0" prefWidth="249.0" text="  XXX-XXX-XXXX" textFill="WHITE">
-                                             <graphic>
-                                                <AnchorPane prefHeight="34.0" prefWidth="39.0" style="-fx-background-color: grey;" />
-                                             </graphic>
-                                          </Label>
-                                          <Label layoutX="14.0" layoutY="52.0" prefHeight="30.0" prefWidth="249.0" text="  AMSW@gmail.com" textFill="WHITE">
-                                             <graphic>
-                                                <AnchorPane prefHeight="34.0" prefWidth="39.0" style="-fx-background-color: grey;" />
-                                             </graphic>
-                                          </Label>
-                                          <Label layoutX="14.0" layoutY="92.0" prefHeight="30.0" prefWidth="249.0" text="  National University - Manila" textFill="WHITE">
-                                             <graphic>
-                                                <AnchorPane prefHeight="34.0" prefWidth="39.0" style="-fx-background-color: grey;" />
-                                             </graphic>
-                                          </Label>
+                                          <GridPane layoutX="16.0" layoutY="-7.0" prefHeight="242.0" prefWidth="391.0">
+                                             <columnConstraints>
+                                                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+                                             </columnConstraints>
+                                             <rowConstraints>
+                                                <RowConstraints maxHeight="86.0" minHeight="10.0" prefHeight="85.0" vgrow="SOMETIMES" />
+                                                <RowConstraints maxHeight="87.0" minHeight="10.0" prefHeight="87.0" vgrow="SOMETIMES" />
+                                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                             </rowConstraints>
+                                             <children>
+                                                <Label prefHeight="30.0" prefWidth="249.0" styleClass="text-filter" text="  XXX-XXX-XXXX" textFill="WHITE">
+                                                   <graphic>
+                                                      <AnchorPane prefHeight="34.0" prefWidth="39.0" style="-fx-background-color: grey;" />
+                                                   </graphic>
+                                                </Label>
+                                                <Label prefHeight="30.0" prefWidth="249.0" styleClass="text-filter" text="  AMSW@gmail.com" textFill="WHITE" GridPane.rowIndex="1">
+                                                   <graphic>
+                                                      <AnchorPane prefHeight="34.0" prefWidth="39.0" style="-fx-background-color: grey;" />
+                                                   </graphic>
+                                                </Label>
+                                                <Label prefHeight="30.0" prefWidth="249.0" styleClass="text-filter" text="  National University - Manila" textFill="WHITE" GridPane.rowIndex="2">
+                                                   <graphic>
+                                                      <AnchorPane prefHeight="34.0" prefWidth="39.0" style="-fx-background-color: grey;" />
+                                                   </graphic>
+                                                </Label>
+                                             </children>
+                                          </GridPane>
                                        </children>
                                     </Pane>
+                                    <Text fill="WHITE" layoutX="21.0" layoutY="84.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text-filter2" text="We’re here to help. Whether you have questions, feedback, or business inquiries, our team is ready to assist you. Reach out and let’s connect." textAlignment="JUSTIFY" wrappingWidth="414.02691650390625">
+                                       <font>
+                                          <Font size="14.0" />
+                                       </font>
+                                    </Text>
                                  </children>
                               </Pane>
-                              <Pane layoutX="481.0" layoutY="32.0" prefHeight="311.0" prefWidth="325.0" style="-fx-background-color: #474747;" />
-                              <Label layoutX="490.0" layoutY="35.0" text="NAME" textFill="WHITE" />
-                              <Label layoutX="490.0" layoutY="88.0" text="EMAIL" textFill="WHITE" />
-                              <Label layoutX="490.0" layoutY="138.0" text="PHONE NUMBER" textFill="WHITE" />
-                              <Label layoutX="490.0" layoutY="188.0" text="MESSAGE" textFill="WHITE" />
-                              <TextField layoutX="490.0" layoutY="153.0" prefHeight="25.0" prefWidth="305.0" promptText="XXX-XXX-XXXX" />
-                              <TextField layoutX="490.0" layoutY="52.0" prefHeight="25.0" prefWidth="305.0" promptText="FULL NAME" />
-                              <TextArea layoutX="490.0" layoutY="204.0" prefHeight="87.0" prefWidth="305.0" promptText="WRITE YOUR MESSAGE HERE..." />
-                              <TextField layoutX="490.0" layoutY="103.0" prefHeight="25.0" prefWidth="305.0" promptText="EXAMPLE@GMAIL.COM" />
-                              <Button layoutX="743.0" layoutY="306.0" mnemonicParsing="false" text="SEND" />
+                              <GridPane layoutX="752.0" layoutY="7.0" prefHeight="553.0" prefWidth="398.0">
+                                 <columnConstraints>
+                                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+                                 </columnConstraints>
+                                 <rowConstraints>
+                                    <RowConstraints maxHeight="100.0" minHeight="10.0" prefHeight="92.0" vgrow="SOMETIMES" />
+                                    <RowConstraints maxHeight="47.0" minHeight="9.0" prefHeight="17.0" vgrow="SOMETIMES" />
+                                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                    <RowConstraints maxHeight="105.0" minHeight="10.0" prefHeight="85.0" vgrow="SOMETIMES" />
+                                    <RowConstraints maxHeight="55.0" minHeight="10.0" prefHeight="35.0" vgrow="SOMETIMES" />
+                                 </rowConstraints>
+                                 <children>
+                                    <Label styleClass="text-filter" text="NAME" textFill="WHITE" GridPane.valignment="BOTTOM" />
+                                    <TextField prefHeight="25.0" prefWidth="392.0" promptText="FULL NAME" GridPane.rowIndex="1" GridPane.valignment="BASELINE" />
+                                    <Label styleClass="text-filter" text="EMAIL" textFill="WHITE" GridPane.rowIndex="2" GridPane.valignment="BOTTOM" />
+                                    <TextField prefHeight="25.0" prefWidth="392.0" promptText="EXAMPLE@GMAIL.COM" GridPane.rowIndex="3" GridPane.valignment="BASELINE" />
+                                    <Label styleClass="text-filter" text="PHONE NUMBER (OPTIONAL)" textFill="WHITE" GridPane.rowIndex="4" GridPane.valignment="BOTTOM" />
+                                    <TextField prefHeight="25.0" prefWidth="408.0" promptText="XXX-XXX-XXXX" GridPane.rowIndex="5" GridPane.valignment="BASELINE" />
+                                    <Label styleClass="text-filter" text="MESSAGE" textFill="WHITE" GridPane.rowIndex="6" GridPane.valignment="BOTTOM" />
+                                    <TextArea prefHeight="136.0" prefWidth="398.0" promptText="WRITE YOUR MESSAGE HERE..." styleClass="text-area" GridPane.rowIndex="7" GridPane.valignment="BASELINE" />
+                                    <Button mnemonicParsing="false" prefHeight="34.0" prefWidth="74.0" styleClass="icon-button" text="SEND" textFill="WHITE" GridPane.halignment="RIGHT" GridPane.rowIndex="8" GridPane.valignment="BOTTOM" />
+                                 </children>
+                              </GridPane>
                            </children>
-                        </Pane>
-                        <Pane prefHeight="200.0" prefWidth="838.0" />
+                        </AnchorPane>
                      </children>
-                  </VBox>
-               </content>
-            </Tab>
-        </tabs>
-      </TabPane>
-   </children>
-</StackPane>
+                  </StackPane>
+               </children>
+            </HBox>
+         </children>
+      </VBox>
+   </center>
+   <top>
+      <AnchorPane prefHeight="82.0" prefWidth="1348.0" style="-fx-background-color: #cccccc;" BorderPane.alignment="CENTER">
+         <children>
+            <GridPane layoutY="4.0" prefHeight="102.0" prefWidth="1392.0">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <AnchorPane prefHeight="157.0" prefWidth="449.0" GridPane.columnIndex="1">
+                     <children>
+                        <ImageView fitHeight="103.0" fitWidth="193.0" layoutX="181.0" layoutY="36.0" pickOnBounds="true" preserveRatio="true" styleClass="image-holder" AnchorPane.bottomAnchor="11.0" AnchorPane.leftAnchor="181.0" AnchorPane.rightAnchor="147.6666717529297" AnchorPane.topAnchor="36.0">
+                           <image>
+                              <Image url="@../../../../../../../../../Downloads/469565416_122109809246643454_5833764473841954454_n.jpg" />
+                           </image>
+                        </ImageView>
+                     </children>
+                  </AnchorPane>
+               </children>
+            </GridPane>
+         </children>
+      </AnchorPane>
+   </top>
+</BorderPane>
