--- a/src/main/resources/com/example/pilifitproject/view/ItemDisplay.fxml
+++ b/src/main/resources/com/example/pilifitproject/view/ItemDisplay.fxml
@@ -9,7 +9,7 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="370.0" prefWidth="300.0" style="-fx-border-radius: 20;" styleClass="tab-border" stylesheets="@../styles/ItemDisplay.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Pane layoutX="10.0" layoutY="14.0" prefHeight="282.0" prefWidth="280.0" style="-fx-background-color: #888888;" styleClass="image-view">
+      <Pane layoutX="10.0" layoutY="14.0" prefHeight="282.0" prefWidth="280.0" style="-fx-background-color: #CCCCCC;" styleClass="image-view">
          <children>
 
             <ImageView fitHeight="282.0" fitWidth="280.0" pickOnBounds="true" preserveRatio="true" />
