--- a/src/main/resources/com/example/pilifitproject/styles/Generate2.css
+++ b/src/main/resources/com/example/pilifitproject/styles/Generate2.css
@@ -34,3 +34,39 @@
     -fx-font-size: 14px;
     -fx-font-weight: bold;
 }
+
+
+.black-slider {
+    -fx-padding: 0.5em;
+}
+
+.black-slider .track {
+    -fx-background-color: linear-gradient(to right, black, black);
+    -fx-background-insets: 0;
+    -fx-background-radius: 2em;
+    -fx-pref-height: 3px;
+}
+
+.black-slider .thumb {
+    -fx-background-color: black;
+    -fx-background-radius: 50%;
+    -fx-pref-width: 12px;
+    -fx-pref-height: 12px;
+    -fx-effect: dropshadow(gaussian, #ffffff55, 4, 0.5, 0, 0);
+    -fx-cursor: hand;
+    -fx-scale-x: 1;
+    -fx-scale-y: 1;
+    -fx-transition: all 0.2s ease-in-out;
+}
+
+.black-slider .thumb:hover {
+    -fx-scale-x: 1.3;
+    -fx-scale-y: 1.3;
+}
+
+.black-slider .axis {
+    -fx-tick-label-fill: white;
+    -fx-tick-mark-fill: white;
+
+}
+
