--- a/src/main/resources/com/example/pilifitproject/view/AboutUs2.fxml
+++ b/src/main/resources/com/example/pilifitproject/view/AboutUs2.fxml
@@ -1,61 +1,87 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.TextFlow?>
 
-
-<AnchorPane prefHeight="432.0" prefWidth="720.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.pilifitproject.view.AboutUs2">
-   <children>
-      <ImageView fitHeight="441.0" fitWidth="730.0" layoutY="-9.0" opacity="0.74" pickOnBounds="true">
-         <image>
-            <Image url="@../../../../../../../../../Downloads/contact%20bg.jpg" />
-         </image>
-      </ImageView>
-      <HBox prefHeight="26.0" prefWidth="730.0" style="-fx-background-color: black;">
-         <children>
-            <Button layoutX="75.0" layoutY="10.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="72.0" style="-fx-background-color: black;" text="HOME" textFill="#c6c2c2" />
-            <Button layoutX="10.0" layoutY="10.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="72.0" style="-fx-background-color: black;" text="ABOUT" textFill="#c6c2c2" />
-            <Button layoutX="82.0" layoutY="10.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="72.0" style="-fx-background-color: black;" text="CONTACT" textFill="#c6c2c2" />
-         </children>
-      </HBox>
-      <GridPane layoutY="26.0" prefHeight="164.0" prefWidth="730.0">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="471.0" minWidth="10.0" prefWidth="244.0" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="471.0" minWidth="10.0" prefWidth="245.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="461.0" minWidth="10.0" prefWidth="245.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
-         <children>
-            <Label alignment="CENTER" prefHeight="90.0" prefWidth="249.0" text="PILIFITS" textFill="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="1">
-               <font>
-                  <Font size="62.0" />
-               </font>
-            </Label>
-            <Button contentDisplay="CENTER" mnemonicParsing="false" prefHeight="25.0" prefWidth="34.0" text="&lt;" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
-            <Button layoutX="10.0" layoutY="100.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="34.0" text="&gt;" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
-            <Button mnemonicParsing="false" text="GENERATE" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER" />
-         </children>
-      </GridPane>
-      <VBox layoutX="77.0" layoutY="171.0" prefHeight="143.0" prefWidth="576.0" style="-fx-background-color: BLACK;">
-         <children>
-            <Label contentDisplay="CENTER" prefHeight="50.0" prefWidth="142.0" text="ABOUT US" textAlignment="CENTER" />
-         </children>
-      </VBox>
-   </children>
+<AnchorPane prefHeight="432.0" prefWidth="720.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.pilifitproject.controller.HomeController">
+    <children>
+        <ImageView fitHeight="441.0" fitWidth="730.0" layoutY="-9.0" pickOnBounds="true">
+            <image>
+                <Image url="@../../../../../../../../../Downloads/contact%20bg.jpg" />
+            </image>
+        </ImageView>
+        <Pane prefHeight="432.0" prefWidth="730.0" style="-fx-background-color: #ACAEB3;">
+            <styleClass>
+                <String fx:value="-fx-background-radius: 15;" />
+                <String fx:value="-fx-padding: 10;" />
+            </styleClass>
+            <children>
+                <VBox layoutX="75.0" layoutY="279.0" prefHeight="75.0" prefWidth="244.0">
+                    <children>
+                        <TitledPane prefHeight="1.0" prefWidth="244.0" text="GOAL" />
+                        <TitledPane prefHeight="22.0" prefWidth="244.0" text="CREATORS" />
+                        <TitledPane prefHeight="22.0" prefWidth="244.0" text="WELCOME" />
+                    </children>
+                </VBox>
+                <ImageView fitHeight="118.0" fitWidth="325.0" layoutX="327.0" layoutY="279.0" pickOnBounds="true" preserveRatio="true" />
+                <ImageView fitHeight="78.0" fitWidth="325.0" layoutX="327.0" layoutY="279.0" pickOnBounds="true" preserveRatio="true" />
+            </children>
+        </Pane>
+        <HBox prefHeight="26.0" prefWidth="730.0" style="-fx-background-color: black;">
+            <children>
+                <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="72.0" style="-fx-background-color: black;" text="HOME" textFill="#c6c2c2" />
+                <Button layoutX="10.0" layoutY="10.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="72.0" style="-fx-background-color: black;" text="ABOUT" textFill="#c6c2c2" />
+                <Button layoutX="82.0" layoutY="10.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="72.0" style="-fx-background-color: black;" text="CONTACT" textFill="#c6c2c2" />
+            </children>
+        </HBox>
+        <GridPane layoutY="26.0" prefHeight="164.0" prefWidth="730.0">
+            <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="471.0" minWidth="10.0" prefWidth="244.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="471.0" minWidth="10.0" prefWidth="245.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="461.0" minWidth="10.0" prefWidth="245.0" />
+            </columnConstraints>
+            <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            </rowConstraints>
+            <children>
+                <Label alignment="CENTER" prefHeight="90.0" prefWidth="249.0" text="PILIFITS" textFill="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                    <font>
+                        <Font size="62.0" />
+                    </font>
+                </Label>
+                <Button contentDisplay="CENTER" mnemonicParsing="false" prefHeight="25.0" prefWidth="34.0" text="&lt;" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER" />
+                <Button layoutX="10.0" layoutY="100.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="34.0" text="&gt;" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER" />
+                <Button mnemonicParsing="false" text="GENERATE" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="CENTER" />
+            </children>
+        </GridPane>
+        <VBox layoutX="77.0" layoutY="171.0" prefHeight="98.0" prefWidth="576.0" style="-fx-background-color: BLACK;">
+            <children>
+                <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="50.0" prefWidth="583.0" text="ABOUT US" textAlignment="CENTER" textFill="WHITE" />
+                <TextFlow prefHeight="200.0" prefWidth="200.0" />
+            </children>
+            <styleClass>
+                <String fx:value="-fx-background-raius: 60;" />
+                <String fx:value="-fx-padding: 40" />
+            </styleClass>
+        </VBox>
+    </children>
 </AnchorPane>
