--- a/src/main/resources/com/example/pilifitproject/view/Home.fxml
+++ b/src/main/resources/com/example/pilifitproject/view/Home.fxml
@@ -15,7 +15,7 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<StackPane fx:id="rootPane" prefHeight="600.0" prefWidth="724.0" stylesheets="@../styles/Home.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="your.package.MainController">
+<StackPane fx:id="rootPane" prefHeight="600.0" prefWidth="724.0" stylesheets="@../styles/Home.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.pilifitproject.controller.HomeController">
     <AnchorPane fx:id="canvasPane" prefHeight="667.0" prefWidth="747.0" style="-fx-background-color: #F4F4F4;">
         <children>
 
@@ -24,7 +24,7 @@
                     <AnchorPane layoutX="295.0" layoutY="47.0" prefHeight="34.0" prefWidth="200.0" />
                     <ImageView fitHeight="259.0" fitWidth="748.0" layoutY="-1.0" pickOnBounds="true" preserveRatio="true" styleClass="preview-border">
                   <image>
-                     <Image url="@../../../../../../../../../Downloads/bg.png.png" />
+                     <Image url="@../images/background/bg.png" />
                   </image>
                     </ImageView>
                       <Label alignment="CENTER" contentDisplay="CENTER" layoutX="280.0" layoutY="81.0" prefHeight="42.0" prefWidth="200.0" text="PILIFITS" textAlignment="CENTER" textFill="#fffafa">
@@ -36,21 +36,6 @@
                   <font>
                      <Font name="System Bold" size="13.0" />
                   </font></Button>
-               <Label layoutX="20.0" layoutY="14.0" text="HOME" textFill="WHITE">
-                  <font>
-                     <Font name="System Bold" size="12.0" />
-                  </font>
-               </Label>
-               <Label layoutX="68.0" layoutY="14.0" text="CONTACT" textFill="WHITE">
-                  <font>
-                     <Font name="System Bold" size="12.0" />
-                  </font>
-               </Label>
-               <Label layoutX="140.0" layoutY="14.0" text="ABOUT" textFill="WHITE">
-                  <font>
-                     <Font name="System Bold" size="12.0" />
-                  </font>
-               </Label>
                <Label alignment="CENTER" contentDisplay="CENTER" layoutX="190.0" layoutY="201.0" prefHeight="18.0" prefWidth="219.0" text="CLOSET" textAlignment="CENTER" textFill="WHITE">
                   <font>
                      <Font name="Arial Black" size="12.0" />
@@ -61,7 +46,24 @@
                      <Font name="System Bold" size="12.0" />
                   </font>
                </Label>
-               <AnchorPane layoutX="3.0" layoutY="1.0" prefHeight="42.0" prefWidth="739.0" />
+               <AnchorPane layoutX="3.0" layoutY="1.0" prefHeight="42.0" prefWidth="739.0">
+                  <children>
+                     <Button layoutX="7.0" layoutY="9.0" mnemonicParsing="false" onAction="#goHome" styleClass="scene-switch" text="HOME" textFill="WHITE">
+                        <font>
+                           <Font name="System Bold" size="12.0" />
+                        </font>
+                     </Button>
+                     <Button layoutX="67.0" layoutY="9.0" mnemonicParsing="false" onAction="#goAbout" styleClass="scene-switch" text="ABOUT" textFill="WHITE">
+                        <font>
+                           <Font name="System Bold" size="12.0" />
+                        </font>
+                     </Button>
+                     <Button layoutX="131.0" layoutY="9.0" mnemonicParsing="false" onAction="#goContact" styleClass="scene-switch" text="CONTACT" textFill="WHITE">
+                        <font>
+                           <Font name="System Bold" size="12.0" />
+                        </font>
+                     </Button>
+                  </children></AnchorPane>
                 </children>
             </AnchorPane>
          <MenuButton fx:id="categoryDropdown" accessibleRole="COMBO_BOX" alignment="CENTER" contentDisplay="CENTER" layoutX="193.0" layoutY="256.0" prefHeight="18.0" prefWidth="94.0" styleClass="drop-select" text="CATEGORY">
