--- a/src/main/resources/com/example/pilifitproject/view/Home.fxml
+++ b/src/main/resources/com/example/pilifitproject/view/Home.fxml
@@ -102,7 +102,14 @@
                             <Font name="System Bold" size="9.0" />
                         </font>
                     </Label>
-                    <AnchorPane prefHeight="99.0" prefWidth="126.0" />
+                    <AnchorPane prefHeight="99.0" prefWidth="126.0">
+                  <children>
+                     <Button fx:id="Addnew" layoutX="-1.0" layoutY="-2.0" mnemonicParsing="false" onAction="#openUploadDialog" prefHeight="93.0" prefWidth="124.0" styleClass="add-item" text="+" textFill="WHITE">
+                        <font>
+                           <Font name="System Bold" size="44.0" />
+                        </font>
+                     </Button>
+                  </children></AnchorPane>
                 </children>
             </GridPane>
             <Slider layoutX="33.0" layoutY="337.0" orientation="VERTICAL" prefHeight="231.0" prefWidth="26.0">
