deleteconfirmation fxml and css

--- a/src/main/resources/com/example/pilifitproject/view/UploadDialog.fxml
+++ b/src/main/resources/com/example/pilifitproject/view/UploadDialog.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.text.Text?>
 <?import javafx.scene.text.TextFlow?>
 
-<AnchorPane fx:id="root" fx:controller="com.example.pilifitproject.controller.UploadDialogController" prefHeight="423.0" prefWidth="345.0" styleClass="soft-tab" stylesheets="@../styles/UploadDialog.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane fx:id="root" prefHeight="423.0" prefWidth="345.0" styleClass="soft-tab" stylesheets="@../styles/UploadDialog.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.pilifitproject.controller.UploadDialogController">
    <children>
       <Button layoutX="286.0" layoutY="13.0" mnemonicParsing="false" styleClass="close-button" text="X">
          <font>
