--- a/src/main/resources/com/example/pilifitproject/view/DeleteConfirmation.fxml
+++ b/src/main/resources/com/example/pilifitproject/view/DeleteConfirmation.fxml
@@ -3,6 +3,8 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
@@ -13,13 +15,27 @@
                 <Font name="System Bold" size="4.0" />
             </font>
         </Button>
-      <Label layoutX="62.0" layoutY="89.0" text="Are you sure you want to delete this file ?">
+      <Label layoutX="129.0" layoutY="78.0" prefHeight="30.0" prefWidth="111.0" text="Are you sure ?">
          <font>
-            <Font name="System Bold" size="12.0" />
+            <Font name="System Bold" size="16.0" />
          </font>
       </Label>
-      <Button layoutX="262.0" layoutY="145.0" mnemonicParsing="false" style="-fx-background-color: #D3D3D3;" styleClass="upload-button" text="DELETE" />
-      <Button layoutX="170.0" layoutY="145.0" mnemonicParsing="false" style="-fx-background-color: light grey;" styleClass="upload-button" text="CANCEL" />
+      <Button layoutX="197.0" layoutY="147.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="86.0" styleClass="delete-button" text="DELETE">
+         <font>
+            <Font size="10.0" />
+         </font>
+      </Button>
+      <Button layoutX="101.0" layoutY="147.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="86.0" style="-fx-background-color: light grey;" styleClass="upload-button" text="CANCEL">
+         <font>
+            <Font name="System Bold" size="10.0" />
+         </font>
+      </Button>
+      <ImageView fitHeight="30.0" fitWidth="35.0" layoutX="173.0" layoutY="53.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../images/others/DeleteBin.png" />
+         </image>
+      </ImageView>
+      <Label layoutX="75.0" layoutY="102.0" text="Are you sure you want to delete this file ?" />
     </children>
     <padding>
         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
