--- a/src/main/resources/com/example/pilifitproject/styles/Closet.css
+++ b/src/main/resources/com/example/pilifitproject/styles/Closet.css
@@ -19,6 +19,7 @@
     -fx-padding: 5 10;
     -fx-font-size: 8px;
     -fx-cursor: hand;
+
 }
 
 .title-text {
@@ -57,7 +58,9 @@
 }
 
 .select-items {
-    -fx-background-radius: 12;
+    -fx-background-color: #d9d9d9;
+    -fx-border-color: transparent;
+    -fx-cursor: hand;
 }
 
 .tab-border {
@@ -72,17 +75,31 @@
 
 
 .close-button {
+     -fx-background-color: #f5f5f5;
+     -fx-text-fill: black;
+     -fx-font-size: 12px;
+     -fx-font-weight: bold;
+     -fx-font-family: "System Bold";
+     -fx-background-radius: 100%;
+     -fx-border-color: transparent;
+     -fx-border-width: 2px;
+     -fx-border-radius: 100%;
+     -fx-pref-width: 20px;
+     -fx-pref-height: 20px;
+     -fx-cursor: hand;
+ }
+.save-button {
     -fx-background-color: #f5f5f5;
     -fx-text-fill: black;
     -fx-font-size: 12px;
-    -fx-font-weight: bold;
+    -fx-font-weight: regular;
     -fx-font-family: "System Bold";
-    -fx-background-radius: 100%;
     -fx-border-color: transparent;
-    -fx-border-width: 2px;
-    -fx-border-radius: 100%;
-    -fx-pref-width: 20px;
-    -fx-pref-height: 20px;
+    -fx-background-radius: 15px;
+    -fx-cursor: hand;
+}
+.save-button: hover {
+    -fx-background-color: #90EE90;
 }
 
 .close-button: hover {
