--- a/src/main/resources/com/example/pilifitproject/view/ItemInformation.fxml
+++ b/src/main/resources/com/example/pilifitproject/view/ItemInformation.fxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.MenuButton?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -14,7 +14,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="370.0" prefWidth="519.0" styleClass="tab-border" stylesheets="@../styles/Closet.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.pilifitproject.controller.ClosetController">
+<AnchorPane prefHeight="370.0" prefWidth="519.0" styleClass="tab-border" stylesheets="@../styles/Closet.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.pilifitproject.controller.ItemInformationController">
    <children>
 
                   <!-- Image & Form Details Row -->
@@ -40,7 +40,7 @@
             <!-- Bottom Bar -->
             <HBox alignment="CENTER_LEFT" prefHeight="26.0" prefWidth="188.0" spacing="10">
                <children>
-                  <TextField fx:id="nameInput" alignment="CENTER" prefHeight="26.0" prefWidth="155.0" promptText="Name" styleClass="image-holder" text="fd" />
+                  <TextField fx:id="nameInput" alignment="CENTER" prefHeight="26.0" prefWidth="155.0" promptText="Name" styleClass="image-holder" />
                   <Button fx:id="favoriteBtn" ellipsisString="❤" styleClass="icon-button" text="❤" textAlignment="CENTER">
                      <font>
                         <Font size="19.0" />
@@ -64,27 +64,19 @@
             <!-- Category -->
             <HBox prefHeight="21.0" prefWidth="218.0" spacing="10">
                <Text styleClass="text-filter" text="CATEGORY:" />
-               <MenuButton fx:id="categoryDropdown" accessibleRole="COMBO_BOX" alignment="CENTER" contentDisplay="CENTER" prefHeight="22.0" prefWidth="130.0" styleClass="select-items" text="Select Category" textAlignment="CENTER">
-                  <font>
-                     <Font size="9.0" />
-                  </font>
-               </MenuButton>
+               <ComboBox fx:id="categoryDropdown" prefWidth="150.0" promptText="Select Category" />
             </HBox>
 
             <!-- Style -->
             <HBox prefHeight="22.0" prefWidth="238.0" spacing="10">
                <Text styleClass="text-filter" text="STYLE:" wrappingWidth="76.5501708984375" />
-               <MenuButton fx:id="styleDropdown" alignment="CENTER" prefHeight="31.0" prefWidth="156.0" styleClass="select-items" text="Select Style">
-                  <font>
-                     <Font size="9.0" />
-                  </font>
-               </MenuButton>
+               <ComboBox fx:id="styleDropdown" prefWidth="150.0" promptText="Select Style" />
             </HBox>
 
             <!-- Color -->
             <HBox prefHeight="19.0" prefWidth="218.0" spacing="10">
                <Text styleClass="text-filter" text="COLOR:" wrappingWidth="76.4595947265625" />
-               <TextField fx:id="colorInput" alignment="CENTER" prefHeight="15.0" prefWidth="132.0" promptText="Enter color" styleClass="image-holder" />
+               <ComboBox fx:id="colorDropdown" prefWidth="150.0" promptText="Select Color" />
             </HBox>
 
             <!-- Size -->
